Fixed overflow and highlights duplication

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@
   position: relative;
   background-color: var(--padrao);
   transition: .5s;
+  overflow-x: hidden;
 }
 
 #checkbox:checked+.label .ball {
@@ -69,6 +70,12 @@
 
 .skye-picture {
   position: relative;
+}
+
+.skye-picture img,
+#coding-bg {
+  max-width: 100%;
+  height: auto;
 }
 
 .introduction {
@@ -251,7 +258,7 @@
   justify-content: center;
   align-items: center;
   background-color: var(--check);
-  width: 412px;
+  width: 90vw;
   height: 350px;
   transition: .5s;
   border: 1px solid var(--check);
